--- a/frontend/packages/console-app/console-extensions.json
+++ b/frontend/packages/console-app/console-extensions.json
@@ -219,6 +219,38 @@
     }
   },
   {
+    "type": "console.page/route",
+    "properties": {
+      "exact": true,
+      "path": ["/cluster-configuration", "/cluster-configuration/:group"],
+      "component": { "$codeRef": "clusterConfiguration.ClusterConfigurationPage" }
+    }
+  },
+
+  {
+    "type": "console.cluster-configuration/group",
+    "properties": {
+      "id": "general",
+      "label": "%console-app~General%"
+    }
+  },
+  {
+    "type": "console.cluster-configuration/group",
+    "properties": {
+      "id": "projects",
+      "label": "%console-app~Projects%",
+      "insertAfter": "general"
+    }
+  },
+  {
+    "type": "console.cluster-configuration/group",
+    "properties": {
+      "id": "developer",
+      "label": "%console-app~Developer%",
+      "insertAfter": "projects"
+    }
+  },
+  {
     "type": "console.user-preference/group",
     "properties": {
       "id": "general",
