--- a/frontend/packages/console-app/package.json
+++ b/frontend/packages/console-app/package.json
@@ -36,11 +36,13 @@
     "exposedModules": {
       "tourContext": "src/components/tour/tour-context.ts",
       "quickStartContext": "src/components/quick-starts/utils/quick-start-context.tsx",
+      "quickStartConfiguration": "src/components/quick-starts/QuickStartConfiguration.tsx",
       "fileUploadContext": "src/components/file-upload/file-upload-context.ts",
       "reduxReducer": "src/redux/reducer.ts",
       "actions": "src/actions",
+      "clusterConfiguration": "src/components/cluster-configuration",
       "userPreferences": "src/components/user-preferences",
-      "perspective": "src/utils/perspective",
+      "perspective": "src",
       "dynamicPluginsHealthResource": "src/components/dashboards-page/dynamic-plugins-health-resource",
       "storageProvisioners": "src/components/storage/StorageClassProviders",
       "storageProvisionerDocs": "src/components/storage/Documentation"
